--- a/package.json
+++ b/package.json
@@ -41,13 +41,17 @@
     "systemjs": "~0.19.41",
     "zone.js": "0.7.2",
     "@types/node": "^6.0.45",
+    "systemjs-builder": "^0.15.17",
     "typescript": "^2.0.3",
-    "compression": "^1.6.2"
+    "yargs": "^4.7.1",
+    "compression": "^1.6.2",
+    "reflect-metadata": "~0.1.8"
   },
   "devDependencies": {
     "@types/chartist": "~0.9.33",
     "@types/core-js": "~0.9.34",
     "@types/jquery": "~2.0.34",
+    "@types/node": "~6.0.45",
     "concurrently": "~3.0.0",
     "lite-server": "~2.2.2",
     "typescript": "~2.0.3",
