--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "tsc:w": "tsc -w"
   },
   "engines": {
-    "node": "5.9.1"
+    "node": "*"
   },
   "license" : "MIT",
   "repository" :
@@ -31,12 +31,12 @@
     "@angular/upgrade": "~2.2.2",
     "@types/core-js": "0.9.35",
     "angular-in-memory-web-api": "~0.1.13",
-    "angular2-chartist": "~0.10.1",
-    "angular2-google-maps": "~0.16.0",
+    "ng-chartist": "~0.10.1",
+    "@agm/core": "~0.16.0",
     "chartist": "~0.9.8",
     "core-js": "2.4.1",
     "jquery": "~3.1.1",
-    "ng2-bootstrap": "~1.1.16",
+    "ngx-bootstrap": "~1.1.16",
     "rxjs": "5.0.0-rc.5",
     "systemjs": "~0.19.41",
     "zone.js": "0.7.2",
