--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "light-bootstrap-dashboard-angular2",
   "private": true,
   "version": "1.1.1",
+  "main": "server.js",
   "scripts": {
-      "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+      "start": "node server.js && tsc && concurrently \"tsc -w\" \"lite-server\" ",
+      "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js",
       "lite": "lite-server",
       "tsc": "tsc",
       "tsc:w": "tsc -w"
   },
   "engines": {
-    "node": "*"
+    "node": "*",
+    "npm": "*"
   },
   "license" : "MIT",
   "repository" :
@@ -20,6 +23,14 @@
       "url": "https://github.com/indeu/light-bootstrap-dashboard/issues"
   },
   "dependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "mocha": "^2.4.5",
+    "mongodb": "^2.1.16",
+    "morgan": "^1.7.0",
+    "object-assign":"4.1.0"
     "@angular/common": "~2.2.2",
     "@angular/compiler": "~2.2.2",
     "@angular/core": "~2.2.2",
