--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign":"4.1.0",
     "@angular/common": "~2.2.2",
     "@angular/compiler": "~2.2.2",
     "@angular/core": "~2.2.2",
