--- a/package.json
+++ b/package.json
@@ -4,38 +4,27 @@
   "version": "1.1.1",
   "main": "server.js",
   "scripts": {
-      "start": "node server.js",
-      "test": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-      "lite": "lite-server",
-      "postinstall": "typings install",
-      "tsc": "tsc",
-      "tsc:w": "tsc -w",
-      "typings": "typings"
+    "start": "node server.js",
+    "test": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
   "engines": {
     "node": "*",
     "npm": "*"
   },
-  "license" : "MIT",
-  "repository" :
-  { "type" : "git",
-    "url" : "https://github.com/indeu/light-bootstrap-dashboard.git"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/indeu/light-bootstrap-dashboard.git"
   },
-  "bugs":{
-      "url": "https://github.com/indeu/light-bootstrap-dashboard/issues"
+  "bugs": {
+    "url": "https://github.com/indeu/light-bootstrap-dashboard/issues"
   },
   "dependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mocha": "^2.4.5",
-    "mongodb": "^2.1.16",
-    "morgan": "^1.7.0",
-    "object-assign":"4.1.0",
-    "@angular/platform-server": "2.0.0-rc.1",
-	  "@angular/router-deprecated": "2.0.0-rc.1",
-    "bootstrap": "^3.3.6",
     "@angular/common": "~2.2.2",
     "@angular/compiler": "~2.2.2",
     "@angular/core": "~2.2.2",
@@ -43,23 +32,35 @@
     "@angular/http": "~2.2.2",
     "@angular/platform-browser": "~2.2.2",
     "@angular/platform-browser-dynamic": "~2.2.2",
+    "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router": "~3.2.2",
+    "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "~2.2.2",
     "@types/core-js": "0.9.35",
+    "@types/node": "^6.0.45",
     "angular-in-memory-web-api": "~0.1.13",
+    "bootstrap": "^3.3.6",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "chartist": "~0.9.8",
+    "compression": "^1.6.2",
     "core-js": "2.4.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
     "jquery": "~3.1.1",
+    "mocha": "^2.4.5",
+    "mongodb": "^2.1.16",
+    "morgan": "^1.7.0",
     "ngx-bootstrap": "~1.6.6",
+    "object-assign": "4.1.0",
+    "quicklook-thumbnail": "^1.0.0",
+    "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-rc.5",
     "systemjs": "~0.19.41",
-    "zone.js": "0.7.2",
-    "@types/node": "^6.0.45",
     "systemjs-builder": "^0.15.17",
     "typescript": "^2.0.3",
     "yargs": "^4.7.1",
-    "compression": "^1.6.2",
-    "reflect-metadata": "~0.1.8"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@types/chartist": "~0.9.33",
@@ -69,10 +70,10 @@
     "concurrently": "~3.0.0",
     "lite-server": "~2.2.2",
     "typescript": "~2.0.3",
-    "ejs":">= 0.0.1",
+    "ejs": ">= 0.0.1",
     "express": "~4.9.8",
     "nodemon": "^1.11.0",
     "systemjs": "0.19.39",
-    "typings":"^1.0.4"
+    "typings": "^1.0.4"
   }
 }
