--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "object-assign": "4.1.0",
     "quicklook-thumbnail": "^1.0.0",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-rc.5",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "~0.19.41",
     "systemjs-builder": "^0.15.17",
     "typescript": "^2.0.3",
