--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js": "2.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "rxjs": "5.4.1",
     "jquery": "~3.1.1",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
