--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "core-js": "2.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "rxjs": "5.4.1",
+    "rxjs": "^5.4.1",
     "jquery": "~3.1.1",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
@@ -56,7 +56,6 @@
     "object-assign": "4.1.0",
     "quicklook-thumbnail": "^1.0.0",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
     "systemjs": "~0.19.41",
     "systemjs-builder": "^0.15.17",
     "typescript": "^2.0.3",
