--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@angular/core": "~2.2.2",
     "@angular/forms": "~2.2.2",
     "@angular/http": "~2.2.2",
-    "@angular/platform-browser": "~2.2.2",
-    "@angular/platform-browser-dynamic": "~2.2.2",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
     "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router": "~3.2.2",
     "@angular/router-deprecated": "2.0.0-rc.1",
