--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "url": "https://github.com/indeu/light-bootstrap-dashboard/issues"
   },
   "dependencies": {
-    "@angular/common": "~2.2.2",
-    "@angular/compiler": "~2.2.2",
-    "@angular/core": "~2.2.2",
-    "@angular/forms": "~2.2.2",
-    "@angular/http": "~2.2.2",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
     "@angular/platform-browser": "^4.2.5",
     "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/platform-server": "2.0.0-rc.1",
+    "@angular/platform-server": "^4.2.5",
     "@angular/router": "~3.2.2",
     "@angular/router-deprecated": "2.0.0-rc.1",
-    "@angular/upgrade": "~2.2.2",
+    "@angular/upgrade": "^4.2.5",
     "@types/core-js": "0.9.35",
     "@types/node": "^6.0.45",
     "angular-in-memory-web-api": "~0.1.13",
